<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/icons_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/icon_user"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/icons_category"
            android:title="@string/category" />
        <item
            android:id="@+id/nav_offers"
            android:icon="@drawable/icons_offers"
            android:title="@string/offers" />
        <item
            android:id="@+id/nav_new_product"
            android:icon="@drawable/icons_newproducts"
            android:title="@string/new_products" />
        <item
            android:id="@+id/nav_my_carts"
            android:icon="@drawable/icons_cart"
            android:title="@string/my_carts" />
        <item
            android:id="@+id/nav_my_orders"
            android:icon="@drawable/icons_myorders"
            android:title="@string/my_orders" />
    </group>
</menu>